<resources>
    <string name="app_name">Learn Online Code</string>
    <string name="learn_online_code">Learn Online Code</string>
    <string name="or_sign_in_with">or Sign In with :</string>
    <string name="don_t_have_an_account">Don\'t have an Account?</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_in">Sign in</string>
    <string name="create_new_account">Create new account</string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="sign_up">Sign Up</string>
    <string name="term_and_condion">By Signing up you agree with our term and condion</string>
</resources>
