<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:padding="12dp"
    tools:context=".SignInActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:background="@drawable/lco_logo" />

    <TextView
        android:id="@+id/heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="4dp"
        android:text="@string/learn_online_code"
        android:textColor="@color/colorPrimary"
        android:textSize="25dp" />

    <TextView
        android:id="@+id/signInText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/heading"
        android:layout_marginTop="16dp"
        android:text="@string/sign_in"
        android:textColor="@android:color/black"
        android:textSize="20dp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/username_text_input_layout"
        style="@style/TextInputLayoutStyle"
        android:layout_below="@+id/signInText">

        <EditText
            android:id="@+id/username_editText"
            style="@style/LayoutStyle"
            android:hint="@string/username" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/password_text_input_layout"
        style="@style/TextInputLayoutStyle"
        android:layout_below="@+id/username_text_input_layout"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/password_editText"
            style="@style/LayoutStyle"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <CheckBox
        android:id="@+id/rememberMe"
        style="@style/LayoutStyle"
        android:layout_below="@+id/password_text_input_layout"
        android:layout_marginTop="8dp"
        android:text="Remember Me" />

    <Button
        android:id="@+id/login"
        style="@style/ButtonStyle"
        android:layout_below="@+id/rememberMe"
        android:text="Login" />

    <TextView
        android:id="@+id/otherSignInText"
        style="@style/SignInWithText"
        android:layout_below="@+id/login" />

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/otherSignInText"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="8dp">

        <android.support.design.widget.FloatingActionButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:layout_marginRight="12dp"
            android:layout_weight="1"
            android:backgroundTint="@android:color/white"
            android:src="@drawable/ic_facebook_logo_in_circular"
            app:backgroundTint="@android:color/white"
            app:elevation="3dp" />

        <android.support.design.widget.FloatingActionButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:layout_marginRight="12dp"
            android:layout_weight="1"
            android:backgroundTint="@android:color/white"
            android:src="@drawable/ic_google_plus_circular_button"
            app:backgroundTint="@android:color/white"
            app:elevation="3dp" />

        <android.support.design.widget.FloatingActionButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:layout_weight="1"
            android:backgroundTint="@android:color/white"
            android:src="@drawable/ic_twitter_circular_button"
            app:backgroundTint="@android:color/white"
            app:elevation="3dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/don_t_have_an_account"
            android:textColor="@android:color/black"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/forgotPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/forgot_password"
            android:textColor="@android:color/black"
            android:textSize="16dp" />
    </LinearLayout>

</RelativeLayout>